# DuckOut

./: .gitignore  CMakeLists.txt  README.md  build_rpc_1.sh  client.c  config.h  generate_tpch.c  install_grpc.sh  makefile  rdma_client.c  rdma_client_helper.c  rdma_client_helper.h  rdma_common.h  rdma_server.c  rdma_server_helper.c  rdma_server_helper.h  rdma_uxc.c  readme  server.c  set_rdma_env.sh  test2.conf  ucp_example_server.c  ucp_hello_world.c  ucp_util.h
.devcontainer/: devcontainer.json
Drpc/: CMakeLists.txt  README.md
Drpc/drpc_example/: CMakeLists.txt  example_service.h
Drpc/drpc_example/callee/: CMakeLists.txt  dserver.cpp
Drpc/drpc_example/caller/: CMakeLists.txt  dclient.cpp
Drpc/include/: DrpcApplication.h  DrpcChannel.h  DrpcConfig.h  DrpcController.h  DrpcServer.h  DrpcService.h  Drpcapplication.h  Drpcchannel.h  Drpcconfig.h
Drpc/src/: DrpcApplication.cpp  DrpcChannel.cpp  DrpcConfig.cpp  DrpcController.cpp  DrpcService.cpp  Drpcapplication.cpp  Drpcchannel.cpp  Drpcconfig.cpp  Drpccontroller.cpp
example/: user.pb.cc  user.pb.h  user.proto
example/callee/: CMakeLists.txt  Kserver.cc
example/caller/: CMakeLists.txt  Kclient.cc
rdma_exp/: .gitignore  hello_world_util.h  readme
src/: CMakeLists.txt  Communication.cc  KrpcProvider.cc  KrpcProvider.h  Krpcchannel.cc  Krpccontroller.cc  Krpcprovider.cc  epollServer.cc  epollServer.h  main.cpp  zookeeperutil.cc
src/include/: Communication.h  EpollServer.h  KrpcLogger.h  Krpcchannel.h  Krpccontroller.h  ucpconnection.h  zookeeperutil.h
src/test/: CMakeLists.txt  add_simple.grpc.pb.h  add_simple.pb.h  add_simple.proto  calculator_client.cpp  calculator_server.cpp  main.cpp
test/: EpollServer_test.cpp
